--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
     <script src="custom-elements/custom-dropdown/js/custom-dropdown.js"></script>
+    <script src="custom-elements/custom-editable-dropdown/js/custom-editable-dropdown.js"></script>
     <script src="js/main.js"></script>
     <title>Document</title>
 
@@ -34,6 +34,7 @@
         </cite>
     </div>
     <my-dropdown></my-dropdown>
+    <my-editable-dropdown></my-editable-dropdown>
 </body>
 
 </html>
