--- a/index.html
+++ b/index.html
@@ -7,18 +7,52 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="custom-elements/custom-dropdown/js/custom-dropdown.js"></script>
     <script src="custom-elements/custom-editable-dropdown/js/custom-editable-dropdown.js"></script>
+    <script src="custom-elements/custom-dialog/js/custom-dialog.js"></script>
     <script src="js/main.js"></script>
     <title>Document</title>
 
     <style>
-        .reference-to-article {
+        .reference-to-article, .courtesy-resizeimage {
             font-weight: 400;
             font-size: 20px;
             margin: 1rem 0;
         }
 
-        .reference-to-article a {
+        .reference-to-article a, .courtesy-resizeimage a {
             text-decoration: none;
+        }
+
+        .dialog-demo-boxes {
+            margin: 1rem 0.5rem;
+            display: flex;
+            align-items: center;
+        }
+
+        .dialog-demo-box {
+            width: 200px;
+            height: 300px;
+            background-color: #8a8a8a;
+            border: 3px solid black;
+            text-align: center;
+        }
+
+        .dialog-demo-box h3 {
+            font-size: 1.5rem;
+            font-weight: 600;
+            border-bottom: 3px solid orange;
+            display: inline-block;
+        }
+
+        .dialog-demo-box:not(:last-child) {
+            margin-right: 20px;
+        }
+
+        .dialog-demo-box-readmore {
+            color: #f7f8f3;
+            text-decoration: none;
+            border: none;
+            background: none;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -33,8 +67,36 @@
             </strong>
         </cite>
     </div>
+    <div class="courtesy-resizeimage">
+        Images are downloaded from wikipedia and resized by <a href="https://resizeimage.net" target="_blank">Resize Image</a> 
+        to fit the container in custom dialog.
+    </div>
     <my-dropdown></my-dropdown>
     <my-editable-dropdown></my-editable-dropdown>
+    <div class="dialog-demo-boxes">
+        <div class="dialog-demo-box dialog-demo-box-1">
+            <h3>Hrithik Roshan</h3>
+            <div class="dialog-demo-box-content">
+                Hrithik Roshan is an Indian actor who appears in Bollywood films. He has portrayed a variety of characters and is known for his dancing skills.
+                <button id="hrithik_wiki" class="dialog-demo-box-readmore">Read More...</button>
+            </div>
+        </div>
+        <div class="dialog-demo-box dialog-demo-box-2">
+            <h3>Vidyut Jamwal</h3>
+            <div class="dialog-demo-box-content">
+                Vidyut Jammwal (Born 10 December 1980 in Jammu, Jammu and Kashmir) is an Indian film actor, martial artist, and stunt performer, who predominantly
+                <button id="vidyut_wiki" class="dialog-demo-box-readmore">Read More...</button>
+            </div>
+        </div>
+        <div class="dialog-demo-box dialog-demo-box-3">
+            <h3>Siddharth Nigam</h3>
+            <div class="dialog-demo-box-content">
+                Siddharth Nigam is an Indian actor,[1] who works in Indian television and films and is known for his roles of Sahir/Samar in Dhoom 3 and Ashoka
+                <button id="siddharth_wiki" class="dialog-demo-box-readmore">Read More...</button>
+            </div>
+        </div>
+        <my-dialog></my-dialog>
+    </div>
 </body>
 
 </html>
